--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "axios": "^0.19.0",
     "immutable": "^4.0.0-rc.12",
     "react": "^16.9.0",
-    "react-cookie": "^4.0.1",
     "react-dom": "^16.9.0",
     "react-loadable": "^5.5.0",
     "react-redux": "^7.1.0",
@@ -16,7 +15,8 @@
     "react-scripts": "3.1.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "universal-cookie": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
