--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "animate.css": "^3.7.2",
+    "animejs": "^3.1.0",
     "axios": "^0.19.0",
     "immutable": "^4.0.0-rc.12",
     "react": "^16.9.0",
