--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "animejs": "^3.1.0",
     "axios": "^0.19.0",
     "immutable": "^4.0.0-rc.12",
+    "js-cookie": "^2.2.1",
     "react": "^16.10.2",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.9.0",
@@ -17,8 +18,7 @@
     "react-scripts": "3.1.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.3.2",
-    "universal-cookie": "^4.0.2"
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
